tests/basic/good/test07.pepa
// File: tests/good/test07.pepa
// Syntax analysis: hiding is supported outside a cooperation

r = 1.0;
s = 10.0;

P1 = (a, r).P2;
P2 = (b, s).P1; 

P1 <> ((P1 <a> P1)/{a})


