tests/basic/bad/test11.pepa
% File: tests/bad/test11.pepa
% Illegal synchronisation (on tau)
P = (tau, r).P;
Q = (tau, r).Q;
(P <tau> Q)
